# acestor

./: CHANGELOG.md  CONTRIBUTING.md  README.md  WorkingNB.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/acestor/: __init__.py
src/acestor/read/: LINELIST_DATADICTIONARY.MD  linelist_datadictionary.yaml  s3_helper.py
src/acestor/read/customreaders/state_29/: dailysummary.py  historical_dailysummary.py
src/acestor/read/customreaders/state_29.py/: Daily Summary v2 Format - ordered_districts.csv  dailysummary.py  linelist.py
tests/: test_acestor.py
tmp/: 2023-09-12.csv  2023-09-12.xlsx  2023-09-14.csv  2023-09-14.xlsx
