[tool.poetry]
name = "acestor"
version = "0.1.0"
description = "A package to handle outbreak data"
authors = ["Sneha S"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
boto3 = "^1.28.44"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
